[package]
name = "cthulhu"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
clap = { version = "4.5.23", features = ["derive"] }
color-eyre = "0.6.3"
serde = { version = "1.0.215", features = ["derive"] }
tera = "1.20.0"
tokio = { version = "1.42.0", features = ["full"] }
rexpect = { path = "./rexpect" }
regex = "1.11.1"
url = "2.5.4"
serialport = "4.6.1"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
io_tee = "0.1.1"
strip-ansi-escapes = "0.2.0"
chrono = { version = "0.4.39", features = ["serde"] }
toml = "0.8.19"
async-channel = "2.3.1"
futures = "0.3.31"
tower-http = { version = "0.6.2", features = ["fs"] }
tera-template-macro = "0.1.3"
serde_json = "1.0.133"
include_dir = "0.7.4"

[workspace]
resolver = "2"
members = [
    "rexpect"
]
