[package]
name = "cthulhu-angel-sm"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
cthulhu-common = { path = "../common" }
regex = "1.11.1"
swexpect = { git = "https://github.com/rewbycraft/swexpect.git" }
tracing = "0.1"
tokio = "1.45.1"
serde = { version = "1.0.219", features = ["derive"] }
include_dir = "0.7.4"
hcl-rs = "0.18.5"
