[package]
name = "cthulhu-angel"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
color-eyre = "0.6.5"
rumqttc = "0.24.0"
tokio = { version = "1.45.1", features = ["full"] }
pin-project = "1.1.10"
cthulhu-common = { path = "../common" }
swexpect = { git = "https://github.com/rewbycraft/swexpect.git" }
cthulhu-config = { path = "../config" }
tokio-util = { version = "0.7.15", features = ["full"] }
strip-ansi-escapes = "0.2.1"
tokio-serial = { version = "5.4.5", features = ["libudev"] }
clap = { version = "4.5.40", features = ["derive"] }
serde_json = "1.0.140"
cthulhu-angel-sm = { path = "../angel-sm" }
