[package]
name = "rexpect"
description = "Interact with unix processes/bash the same way as pexpect or Don libes expect does"
version = "0.6.0"
categories = ["os::unix-apis"]
keywords = ["pty", "automation", "testing", "expect", "pexpect"]
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/rust-cli/rexpect/compare/{{tag_name}}...HEAD", exactly=1},
]

[features]
default = []
which = ["dep:which"]

[dependencies]
comma = "1.0"
nix = { version = "0.29", features = ["fs", "process", "signal", "term"] }
regex = "1"
tempfile = "3"
thiserror = "2.0.0"
which = { version = "7.0", optional = true }
